<resources>
    <string name="app_name">Tip</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the Service?</string>
    <string name="rounding_up">Rounding up</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_15">Good (15%)</string>
    <string name="normal_10">Normal (10%)</string>
</resources>