<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingTop="16dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingLeft="10dp">

    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@id/pic1"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/cost_of_service"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp" />
    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/pic2"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/price"
        android:text="@string/how_was_the_service"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"/>

    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/amazing"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/question"
        app:layout_constraintTop_toBottomOf="@id/question">

        <RadioButton
            android:id="@+id/amazing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_20" />

        <RadioButton
            android:id="@+id/good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_15" />

        <RadioButton
            android:id="@+id/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal_10" />
    </RadioGroup>
    <Switch
        android:id="@+id/round"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tip_options"
        app:layout_constraintStart_toEndOf="@+id/pic3"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintEnd_toEndOf="parent"

        android:text="@string/rounding_up"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:checked="true"/>

    <Button
        android:id="@+id/calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="@id/round"
        app:layout_constraintTop_toBottomOf="@id/round"
        app:layout_constraintEnd_toEndOf="@id/round"/>
    <TextView
        android:id="@+id/tip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Tip Amount: "
        app:layout_constraintTop_toBottomOf="@id/calculate"/>
    <TextView
        android:id="@+id/total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Total Amount: "
        app:layout_constraintTop_toBottomOf="@id/tip"/>
    <ImageView
        android:id="@+id/pic1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/price"
        app:layout_constraintBottom_toBottomOf="@id/price"
        android:src="@drawable/ic_outline_store_24"/>
    <ImageView
        android:id="@+id/pic2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/question"
        app:layout_constraintBottom_toBottomOf="@id/question"
        android:src="@drawable/ic_baseline_room_service_24"/>
    <ImageView
        android:id="@+id/pic3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/round"
        app:layout_constraintBottom_toBottomOf="@id/round"
        android:src="@drawable/ic_baseline_call_made_24"/>



</androidx.constraintlayout.widget.ConstraintLayout>

